完成触发前端功能，添加表单验证

--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -184,7 +184,7 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 /* form表单提示 */
 .el-form-item__error{
-  position: relative;
+  // position: relative;
   line-height: 18px;
 }
 .el-form-item-tips{
